--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.59.16",
     "antd": "^5.21.6",
     "axios": "^1.7.7",
+    "drive-hub-fe": "file:",
     "framer-motion": "^11.11.11",
     "i18next": "^23.16.4",
     "moment": "^2.30.1",
