--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@tanstack/react-query": "^5.59.16",
+    "@types/google.maps": "^3.58.1",
     "antd": "^5.21.6",
     "axios": "^1.7.7",
     "drive-hub-fe": "file:",
