--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "@tanstack/react-query": "^5.59.16",
     "@types/google.maps": "^3.58.1",
+    "@types/styled-components": "^5.1.34",
     "antd": "^5.21.6",
     "axios": "^1.7.7",
     "drive-hub-fe": "file:",
@@ -29,6 +30,7 @@
     "react-i18next": "^15.1.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
+    "styled-components": "^6.1.13",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
